tests/golden/type_errors/contextual_lambda_return_annotation_conflict.cd
let f: fun(number): number = fun (x): string {
  return "bad";
};
