tests/golden/type_errors/contextual_lambda_return_annotation_conflict.err
Type error at 1:39: function `<lambda>` expects return number, got string
  let f: fun(number): number = fun (x): string {
                                        ^
